--- a/CppMinesweeper/CppMinesweeper.vcxproj.filters
+++ b/CppMinesweeper/CppMinesweeper.vcxproj.filters
@@ -26,11 +26,11 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Game.h">
-      <Filter>소스 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Map.h">
-      <Filter>소스 파일</Filter>
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Game.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
